--- a/0x01-react_intro/task_2/dashboard/src/App.css
+++ b/0x01-react_intro/task_2/dashboard/src/App.css
@@ -33,17 +33,15 @@ body {
 .App-body {
   padding: 3rem;
   width: 100%;
-  height: 65vh;
+  height: 60vh;
 }
 
 .App-body label input {
   margin: 10px;
-  padding: 5px;
 }
 
 .App-body button {
-  width: 10em;
-  padding: 5px
+  cursor: pointer;
 }
 
 .App-footer {
